--- a/A_dbms/templates/dbms/agree/agree-counter-preview.html
+++ b/A_dbms/templates/dbms/agree/agree-counter-preview.html
@@ -54,6 +54,13 @@
             padding-bottom: 20mm;
         }
 
+        {#合同封面-丙方#}
+        .page-home-b {
+            font-size: 13.75pt;
+            padding-top: 20mm;
+            padding-bottom: 20mm;
+        }
+
         {#合同签字页#}
         .sign-page {
             padding-top: 24pt;
