--- a/A_dbms/templates/dbms/agree/agree_board/entrust-maximum.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust-maximum.html
@@ -1,163 +1,50 @@
-<div class="split">
+<div class="split" xmlns="http://www.w3.org/1999/html">
     {% include 'dbms/agree/agree_board/entrust/home-page.html' %}
 </div>
 
 <div class="split">
-    <p>根据乙方申请，甲方决定为乙方在<strong><u>{{ agree_obj.branch.name }}</u></strong>的一系列债务
-        （包括借款或承兑汇票、保函等）提供连带责任保证担保。为明确各自的权利、义务，甲乙双方遵照有关
-        法律规定，经协商一致，订立本合同，以便共同遵守执行。
-    </p>
+    {#引子#}
+    <div>{% include 'dbms/agree/agree_board/entrust/max/0-pre.html' %}</div>
     <p>一、甲乙双方遵循平等、自愿、公平、诚实信用原则订立本合同。</p>
     {#担保范围条款#}
     <p>二、{% include 'dbms/agree/agree_board/entrust/max/2-amount-0.html' %}</p>
     {#保证金条款#}
     <p>三、{% include 'dbms/agree/agree_board/entrust/max/3-bail-0.html' %}</p>
     <p>四、甲方代乙方履行付款责任后，乙方应立即向甲方归还下列款项：</p>
-    <p>（一）甲方向银行代付的金额和自代付之日起的利息。</p>
-    <p>（二）甲方实现债权的调查、诉讼、律师费用及其它损失。</p>
+    <div>{% include 'dbms/agree/agree_board/entrust/max/4-1.html' %}</div>
     <p>五、甲方有权在代付范围内，接管一切为债权而设立的任何担保物及其它向乙方债务提供反担保的求偿权，
         乙方应该履行其作为债务人所应履行的一切义务。</p>
     <p>乙方向甲方提供的全部反担保行为对甲方为乙方在上述期间发生的每一笔担保均承担反担保责任。</p>
     <p>六、担保综合费的收取</p>
-    <p>（一）收取标准：按以下第 4） 项收取担保综合费：</p>
-    <p>1）担保品种为人民币借款时，每年按担保本金总额的<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>收取，
-        不足一年的，按一年收取；</p>
-    <p>2）担保品种为银行承兑汇票时，3个月期限承兑每次按担保总额的<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>/年
-        一次性收取，6个月期限承兑每次按
-        担保总额的<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>/年/次收取；</p>
-    <p>3）担保品种为保函时：
-        A、按次收取：每次按担保敞口总额的<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>%收取；
-        B、按担保时间收取：每月按担保敞口总额的<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>% 收取。
-        C、按年收取：每年按担保敞口总额的<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>%收取；</p>
-    <p>4）按以下约定执行：按担保本金总额的<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>%/年收取[含税]，
-        不足一年的，按一年收取。</p>
-    <p>（二）具体数额：按以下第 2）项执行：</p>
-    <p>1）一次收取担保综合费金额为：人民币 ；</p>
-    <p>2）按签订《同意放款确认书》或《保证合同》、《保函》时确认的担保额度以本合同确定的担
-        保综合费率计算收取；</p>
-    <p>3）如担保债务有中长期贷款，则分别为：第一年<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>万元；
-        第二年<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>万元；
-        第三年<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>万元、
-        第四年<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>万元；
-        第五年<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>万元；</p>
-    <p>4）<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>。</p>
-    <p>（三）收取时间：按以下第 2） 项执行：</p>
-    <p>1）乙方于甲方与债权银行或受益人签订《保证合同》前将该笔担保所涉及的担保综合费款项支付给甲方；</p>
-    <p>2）乙方于甲方每次向债权方出具《同意放款确认书》前将该笔担保所涉及的担保综合费款项支付给甲方；</p>
-    <p>3）于担保期内每年的 月 日前支付当年的担保综合费；</p>
-    <p>4）乙方于 前将该笔担保所涉及的担保综合费款项支付给甲方；</p>
-    <p>5）<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>。</p>
-    <p>（四）收取方式：现金或转账支付。</p>
-    <p>（五）乙方未在上述规定的时间内按时足额支付担保综合费的，甲方有权在乙方足额支付担保综合费之前拒绝
-        与其债权人签订担保合同，乙方应按未付担保综合费金额的0.08%/日支付违约金。担保期内，乙方提前履行甲
-        方担保债务，甲方所收担保费皆不退还。</p>
+    <div>{% include 'dbms/agree/agree_board/entrust/max/6-charge-1.html' %}</div>
     <p>七、甲方的权利义务</p>
-    <p>（一）甲方有权对乙方的经营情况及借款的使用情况进行检查和了解。</p>
-    <p>（二）甲方有权按照本合同第三条、第六条约定向乙方按时足额收取保证金、担保费。</p>
-    <p>（三）甲方应对乙方提供的有关乙方的资料、文件、信息保密，但法律、法规规定的，司法、仲裁或其他类似程
-        序或有关监督部门和其他有权机构要求披露的或本合同另有约定的除外。</p>
+    <div>{% include 'dbms/agree/agree_board/entrust/max/7-rights-j-1.html' %}</div>
     <p>八、乙方的权利义务</p>
-    <p>（一）乙方必须按其与债权银行签订的借款合同及其他债权文件（以下简称“主债权合同”）约定的还款方式、
-        时间、数额严格执行还款计划。</p>
-    <p>
-        （二）担保期间，乙方应当每季度末结束后15日内向甲方提供资产负债表、损益表及现金流量表等财务报告及
-        财务状况说明书。甲方可定期或不定期对乙方的生产、经营及财务状况及资金使用情况进行监督，乙方应积极
-        配合，不得以任何理由推诿、搪塞。</p>
-    <p>（三）未经甲方书面同意，不得擅自与债权银行方修改主债权合同。</p>
-    <p>（四）担保期间，乙方因经营、资产变动、行政处罚、诉讼等重大事项，可能增加甲方的担保风险或加重甲方
-        担保责任情形的，应立即通知甲方。</p>
-    <p>（五）债权银行通知甲方代偿乙方的债务时，甲方不需经乙方同意即可代偿。</p>
-    <p>（六）实施以下行为之一的，乙方应提前三十日书面通知甲方并征得甲方书面同意：</p>
-    <p>1）乙方改变经营决策，包括但不限于转股、改组、合并、分立、股份制改造、合资、合作、联营、承包、
-        租赁、经营范围和注册资本变更等可能影响甲方权益的情形；</p>
-    <p>2）乙方举借新债、对外担保等实施可能影响甲方作为保证人利益的其他重大经营决策时；</p>
-    <p>3）乙方出租、出售、转移、转让其甲方认为足以影响其偿债能力的财产或/和其合法财产性权利的。</p>
+    <div>{% include 'dbms/agree/agree_board/entrust/max/8-rights-y-1.html' %}</div>
     <p>九、乙方向甲方提供反担保时，应签订相应的《最高额抵押反担保合同》、《最高额质押反担保合同》、《最
         高额保证反担保合同》并承诺下述事项：</p>
-    <p>（一）与财产抵押物、质押物、保证相关的一切费用，包括但不限于评估、保险、鉴定、登记、保管、公证等
-        费用均由乙方承担。</p>
-    <p>（二）乙方负责办理抵押物在抵押期间的财产保险，并应如实告知保险人被保险财产已经抵押给甲方的事实，
-        且要求保险人以保险批单形式予以注明相关信息和未经甲方同意，保险人不得直接将保险金给付乙方的意思
-        表示的承诺。保险单由甲方代为保管。乙方投保的保险期间期限至少应长于票据及贷款期限六个月（若乙方担
-        保的票据及贷款系分批到期，则保险期间至少应长于最后一笔到期后六个月）。</p>
-    <p>（三）《最高额抵押反担保合同》、《最高额质押反担保合同》项下反担保的抵押物、质押物价值减少时，乙
-        方应在三十日内向甲方提供甲方认可的，与该抵押物、质押物减少的价值额相当的新担保。</p>
-    <p>（四）乙方向甲方提供的所有反担保措施落实前，未经甲方确认，乙方不得使用上述贷款。</p>
+    <div>{% include 'dbms/agree/agree_board/entrust/max/9-promise-1.html' %}</div>
     <p>十、抵押、质押期间，抵押物、质押物如发生投保范围的损失，或者因其他第三人行为导致抵押物价值减少，保险
         赔偿金或损害赔偿金应作为抵押、质押物，由乙方存入甲方指定的账户，抵押、质押期间，未经甲方书面同意，
         乙方不得单方面动用。</p>
     <p>十一、由第三人为乙方向甲方提供财产进行反担保的，本合同第九条所列之条款由乙方和第三人承担履行责任。</p>
     <p>十二、合同的变更和解除</p>
-    <p>（一）本合同生效后，甲乙任何一方不得擅自变更和解除本合同。</p>
-    <p>（二）未经甲方书面同意，乙方不得采取任何方式转移或者变相转移本合同项下的权利、义务。</p>
-    <p>（三）乙方如将本合同项下的权利、义务转让给第三方，应事先经甲方书面同意，其转让行为在受让单位和甲
-        方重新签订协议书后生效。</p>
-    <p>（四）甲乙任何一方发生合并、分立、承包及股份制改造等转制变更时，由变更后法人承担或连带承担履行本
-        合同的义务，享有应有的权利。</p>
+    <div>{% include 'dbms/agree/agree_board/entrust/max/12-change-1.html' %}</div>
     <p>十三、违约责任</p>
-    <p>（一）本合同生效后，甲乙双方均应履行本合同约定的义务，任何一方不履行或不完全履行本合同约定义务的，
-        应当承担相应的违约责任。</p>
-    <p>（二）在本合同履行过程中，如发生以下情形之一的，即视为乙方违约，乙方应向甲方支付本合同约定担保最
-        高限额的5%的违约金。</p>
-    <p>1）乙方不履行本合同约定的任何一项义务；</p>
-    <p>2）乙方违反主债权合同约定，致使甲方代偿的；</p>
-    <p>3）乙方没有按期偿还与主债权合同项下的贷款本金、利息；</p>
-    <p>4）乙方向甲方提供的所有反担保措施未落实前，未经甲方确认，乙方擅自使用上述贷款的；</p>
-    <p>5）向甲方提供财产担保的乙方（或第三人）违反财产担保协议或担保财产明显贬值，乙方又无法落实甲方认可
-        的新的担保财产时；</p>
-    <p>6）乙方向甲方提供虚假资料，骗取甲方提供担保的；</p>
-    <p>7）乙方出现欠息、经营状态明显恶化、发生严重安全、质量、公共事故，或其他突发事件、涉诉或重大法律纠
-        纷、拖欠职工工资、财务指标异常或恶化、资金大量异常移动
-        、企业非正常停产、企业负责人失去联系、企业骨干多人离职等不安事项；</p>
-    <p>8）乙方及财产担保人发生了其他足以影响其偿债能力或缺乏偿债诚意的状况及行为；</p>
-    <p>9）乙方违反主债权合同的约定或者发生主债权合同项下的违约事项，致使银行要求甲方承担担保责任的；</p>
-    <p>10）乙方发生危及、损害或可能危及、损害甲方权益的其他事项。</p>
-    <p>（三）乙方不履行本协议第七条、第八条、第九条，以及出现上述第十三条第二款情形之一，甲方有权行使下
-        述一项或几项措施，乙方对此没有异议:</p>
-    <p>1）要求乙方、担保人限期纠正其违约行为；</p>
-    <p>2）要求乙方赔偿因违约而给甲方造成的损失；</p>
-    <p>3）要求乙方支付甲方本合同约定担保最高限额的5%的违约金；</p>
-    <p>4）要求乙方在甲方规定的期限内提前偿还全部借款本息，同时有权要求贷款银行停止发放尚未划付的贷款、
-        提前收回已发放的贷款本息，如贷款银行怠于提前收贷，或乙方资金不能保证提前偿还全部借款本息时，
-        甲方有权在约定担保责任范围内提前对乙方进行诉讼追偿并采取财产保全措施或处置担保财产，乙方不能以
-        任何理由抗辩；</p>
-    <p>5）甲方代乙方履行付款责任后，要求乙方立即归还下列款项：</p>
-    <p>甲方向银行代偿的金额和自代偿之日起的利息（按银行同期贷款基准利率 4 倍计息）；</p>
-    <p>甲方因实现债权所发生的各项费用（包括但不限于诉讼费、差旅费、律师费、财产保全费、公证费、鉴定费、
-        翻译费、评估拍卖费等）；</p>
-    <p>（四）在本合同履行过程中，如因乙方违反本合同、反担保合同约定，致使银行贷款不予/不能发放或乙方主
-        动放弃银行贷款的，乙方应向甲方支付拟贷款金额1%的尽职调查费，甲方可以从乙方已缴纳的担保费用中直
-        接扣除。</p>
+    <div>{% include 'dbms/agree/agree_board/entrust/max/13-duty-1.html' %}</div>
     <p>十四、甲方代乙方履行清偿义务后，甲方有权以抵押物折价或从拍卖、变卖抵押物所得价款中优先受偿。</p>
-    <p>（一）分配顺序如下：</p>
-    <p>1）抵押物的保管费用、实现债权费用和代偿后代偿额应发生的利息；</p>
-    <p>2）甲方代偿债权银行方本息及甲方的代偿损失；</p>
-    <p>3）甲方收取乙方的违约金；</p>
-    <p>4）甲方代债权银行方收缴其与乙方所约定的有关违约金；</p>
-    <p>5）补偿上述款项后，仍有剩余，剩余部分返还乙方。</p>
-    <p>（二）在代偿范围内，接管一切为债权而设立的任何担保物及其它为该债权而设立的借款反担保的求偿权，
-        乙方应该履行其作为债务人所应履行的一切义务。</p>
-    <p>（三）拍卖或变卖财产担保所得价款不足补偿甲方代偿贷款方本息及甲方的代偿损失时，向乙方继续追偿。</p>
-    <p>（四）甲方认为必要和可能的其他措施。</p>
+    <div>{% include 'dbms/agree/agree_board/entrust/max/14-priority-1.html' %}</div>
     <p>十五、义务的连续性</p>
-    <p>
-        本合同项下乙方的一切义务均具有连续性，对其继承人、接管人、受让人及其合并、改组、更改名称等后的
-        主体均具有完全的约束力，不受任何争议、索赔和法律程序及上级单位任何指令和乙方与任何自然人或法人
-        签订的任何合同、文件的影响，也不因乙方破产、无力偿还债务、丧失企业资格、更改组织章程以及发生任
-        何本质上的变更而有任何改变。</p>
+    <div>{% include 'dbms/agree/agree_board/entrust/max/15-continuation-1.html' %}</div>
     <p>十六、通知送达条款</p>
-    <div>
-        {% include 'dbms/agree/agree_board/entrust/service-clause.html' %}
-    </div>
+    <div>{% include 'dbms/agree/agree_board/entrust/service-clause.html' %}</div>
     <p>十七、甲乙双方同意约定的其他事项：</p>
-    <p> 此栏空白</p>
-    <p>十八、因本协议发生的争议，经协商不能达成一致意见，应向本合同签订地人民法院提起诉讼，本合同签订地
-        为成都市武侯区。</p>
+    <div>{% include 'dbms/agree/agree_board/17-other-1.html' %}</div>
+    {#争议解决#}
+    <p>十八、{% include 'dbms/agree/agree_board/entrust/max/18-dispute-1.html' %}</p>
     <p>十九、本协议经甲方与乙方加盖公章且法定代表人签章即生效。</p>
     <p>二十、其他</p>
-    <div>
-        {% include 'dbms/agree/agree_board/entrust/20-other.html' %}
-    </div>
+    <div>{% include 'dbms/agree/agree_board/entrust/20-other.html' %}</div>
 </div>
 
 <div class="split">
