--- a/A_dbms/templates/dbms/agree/agree_board/entrust/max/2-amount-0.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust/max/2-amount-0.html
@@ -3,7 +3,7 @@
 <u>&nbsp&nbsp&nbsp&nbsp</u>日至<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>年
 <u>&nbsp&nbsp&nbsp&nbsp</u>月<u>&nbsp&nbsp&nbsp&nbsp</u>日期间，
 向债权人（或受益人）<strong><u>{{ agree_obj.branch.name }}</u></strong>申请限额（即最高
-额限额）为人民币<strong><u class="frap">{{ agree_amount_str }}</u></strong>万元
+额限额）为<strong><u class="frap">人民币{{ agree_amount_str }}万元</u></strong>
 （大写：<strong><u>{{ agree_amount_cn }}</u></strong>）
 的一系列债务（包括但不限于：人民币借款、银行承兑汇票扣除保证金后的差额票款、保函等）提供担保。
 上述一系列债务的保证合同包括但不限于：
