--- a/A_dbms/templates/dbms/review/review-scan.html
+++ b/A_dbms/templates/dbms/review/review-scan.html
@@ -14,5 +14,6 @@
 {% block extra-js %}
     {% include 'dbms/review/extra/js-review-plan-add.html' %}
     {% include 'dbms/review/extra/js-review-add.html' %}
+    {% include 'dbms/review/extra/js-review-auto-add.html' %}
 
 {% endblock %}
