--- a/A_dbms/templates/dbms/agree/agree_board/counter/0-counter-home-page.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/0-counter-home-page.html
@@ -30,7 +30,7 @@
 
 </p>
 <div class="page-table">
-    <div class="page-table-1">
+    <div class="page-home-j">
         <div>
             <p><strong>担保人（甲方）：成都武侯中小企业融资担保有限责任公司</strong></p>
             <p>住所（地址）：成都市武侯区武青南路33号(武侯新城管委会内)</p>
@@ -43,7 +43,7 @@
         (31, '应收质押'), (32, '股权质押'), (33, '票据质押'), (34, '动产质押'),
         (41, '其他权利质押'),
         (51, '股权预售'), (52, '房产预售'), (53, '土地预售'))-->
-    <div class="page-table-1">
+    <div class="page-home-y">
         {% if counter_obj.counter_typ == 1 %}
             {% for custom in counter_obj.assure_counter.custome.all %}
                 <div>
@@ -72,7 +72,7 @@
             {% endfor %}
         {% endif %}
     </div>
-    <div class="page-table-1">
+    <div class="page-home-b">
         <div>
             <p><strong>借款人（丙方）：<u>{{ agree_obj.lending.summary.custom.name }}</u></strong></p>
             <p>住所（地址）：<u>{{ agree_obj.lending.summary.custom.company_custome.registered_addr }}</u></p>
