--- a/A_dbms/templates/dbms/agree/preview-agree.html
+++ b/A_dbms/templates/dbms/agree/preview-agree.html
@@ -54,6 +54,11 @@
             padding-bottom: 20mm;
         }
 
+        .agree-title-g {
+            text-align: center;
+            font-size: 21pt;
+        }
+
         {#合同签字页#}
         .sign-page {
             padding-top: 24pt;
