--- a/A_dbms/templates/dbms/appraisal/appraisal-summary-scan.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal-summary-scan.html
@@ -36,7 +36,7 @@
         <div class="notice-body">
             <p style="margin-bottom: 0px;">编号：成武担审保会{{ article_obj.summary_num }}</p>
             <div>
-                <table style="width: 100%">
+                <table style="width: 100%;">
                     <tbody>
                     {% include 'dbms/appraisal/summary/guarantee-th.html' %}
                     <tr> {#综合审批意见#}
