--- a/A_dbms/templates/dbms/review/review-scan.html
+++ b/A_dbms/templates/dbms/review/review-scan.html
@@ -8,6 +8,7 @@
         {% include 'dbms/custom/scan/custom-tab.html' %}
         {% include 'dbms/review/modl/review-plan-mod.html' %}
         {% include 'dbms/review/modl/review-add-mod.html' %}
+        {% include 'dbms/review/modl/review-del-mod.html' %}
     </div>
 {% endblock %}
 
@@ -15,5 +16,5 @@
     {% include 'dbms/review/extra/js-review-plan-add.html' %}
     {% include 'dbms/review/extra/js-review-add.html' %}
     {% include 'dbms/review/extra/js-review-auto-add.html' %}
-
+    {% include 'dbms/review/extra/js-review-del.html' %}
 {% endblock %}
