--- a/A_dbms/templates/dbms/agree/agree_board/counter/20-other.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/20-other.html
@@ -16,12 +16,19 @@
 </p>
 <p><strong>声明：甲方已采取合理方式提请乙、丙方注意本合同项下免除或限制其责任的条款，应乙方要求，甲方已经就本
     合同做了相应的条款说明。甲、乙、丙三方对本合同所有条款内容的理解不存在异议。</strong></p>
-<p><strong>乙方确认签章： 丙方确认签章：</strong></p>
-<p>
-    {% if counter_obj.counter_typ == 1 %}
-        {% for custom in counter_obj.assure_counter.custome.all %}
-            <strong><u>{{ custom.name }}</u></strong>
-        {% endfor %}
-    {% endif %}
-    <strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong>
-</p>
+<div class="row">
+    <div class="col-lg-6 col-xs-6">
+        <p><strong>乙方确认签章：</strong></p>
+        <p>
+            {% if counter_obj.counter_typ == 1 %}
+                {% for custom in counter_obj.assure_counter.custome.all %}
+                    <strong><u>{{ custom.name }}</u></strong>
+                {% endfor %}
+            {% endif %}
+        </p>
+    </div>
+    <div class="col-lg-6 col-xs-6">
+        <p><strong>丙方确认签章：</strong></p>
+        <p><strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong></p>
+    </div>
+</div>
