--- a/A_dbms/templates/dbms/agree/agree_board/counter/counter-m-x.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/counter-m-x.html
@@ -1,15 +1,15 @@
 <div class="container">
     <div class="split">
-        {% include 'dbms/agree/agree_board/counter/0-counter-home-page.html' %}
+        {% include 'dbms/agree/agree_board/counter/counter-home.html' %}
     </div>
     <div class="split">
         <div>{% include 'dbms/agree/agree_board/counter/max/0-pre.html' %}</div>
         <p><strong>第一条</strong> 最高额保证反担保的债权为：</p>
         <div>{% include 'dbms/agree/agree_board/counter/max/1-creditor-rights-1.html' %}</div>
         <p><strong>第二条</strong> 最高额保证反担保的范围</p>
-        <div>{% include 'dbms/agree/agree_board/counter/max/2-scope-1.html' %}</div>
+        <div>{% include 'dbms/agree/agree_board/counter/max/x/2-x-scope-1.html' %}</div>
         <p><strong>第三条</strong> 反担保的责任形式和保证期限</p>
-        <div>{% include 'dbms/agree/agree_board/counter/max/3-period-1.html' %}</div>
+        <div>{% include 'dbms/agree/agree_board/counter/max/x/3-x-period-1.html' %}</div>
         <p><strong>第四条</strong> 债权的确定</p>
         <div>{% include 'dbms/agree/agree_board/counter/max/4-confirm-1.html' %}</div>
         <p><strong>第五条</strong> 义务和责任的连续性</p>
@@ -28,12 +28,14 @@
         <div>{% include 'dbms/agree/agree_board/counter/11-notify-1.html' %}</div>
         <p><strong>第十二条</strong> 争议的解决</p>
         <div>{% include 'dbms/agree/agree_board/counter/12-dispute-1.html' %}</div>
-
-        <p>十三、其他</p>
+        <p><strong>第十三条</strong> {% include 'dbms/agree/agree_board/counter/max/13-notarization-0.html' %}</p>
+        <p><strong>第十四条</strong> {% include 'dbms/agree/agree_board/counter/max/14-explain-0.html' %}</p>
+        <p><strong>第十五条</strong> {% include 'dbms/agree/agree_board/counter/max/15-operation-0.html' %}</p>
+        <p><strong>第十六条</strong> 其他</p>
         <div>{% include 'dbms/agree/agree_board/counter/20-other.html' %}</div>
     </div>
     <div class="split">
-        {% include 'dbms/agree/agree_board/counter/counter-signature-page.html' %}
+        {% include 'dbms/agree/agree_board/counter/counter-sign.html' %}
     </div>
 </div>
 
