--- a/A_dbms/templates/dbms/agree/agree_board/counter/counter-s-d.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/counter-s-d.html
@@ -1,166 +1,57 @@
 <div class="container">
     <div class="split">
-        {% include 'dbms/agree/agree_board/counter/counter-home-page.html' %}
+        {% include 'dbms/agree/agree_board/counter/counter-home.html' %}
     </div>
     <div class="split">
-        <p>根据借款人（丙方）成都青洋电子材料有限公司与贷款人招商银行成都龙湖三千支行于 年 月 日签订的 （以下称“主合同”，合同编号： ）,合同约定丙方债务履行期限为自 年 月 日至 年_ 月_ 日止，以及甲方与贷款人签订的
-            （以下称“保证合同”，合同编号 ）和甲方与丙方签订的《委托保证合同》(以下称“委托合同”，合同编号：
-            ），甲方就主合同项下丙方的债务向贷款人提供了连带责任保证担保，担保金额为：人民币本金伍佰万元整及其产生的法定利息、约定利息、复利、罚息、违约金、赔偿金和实现债权的费用（包括但不限于诉讼费、律师费、公证费用、执行费用等）。
-            经丙方要求，乙方愿意以享有所有权或有权通过抵押方式处分的财产为保证合同项下甲方给丙方担保的全部款项向甲方提供抵押反担保。甲、乙、丙三方根据有关法律、法规规定，经协商一致，特订立如下条款：
-        </p>
-
-        <p>一、抵押反担保的范围：</p>
-
-        <p>1、甲方依据主合同和保证合同代为丙方清偿的全部债务；</p>
-        <p>2、委托合同中约定的丙方应向甲方支付的担保费、违约金、赔偿金以及代偿资金占用费等（代偿资金占用费以代偿的全部债务为计算基数，从代偿后次日起按同期银行贷款基准利率4倍计算）；
-        </p>
-        <p>3、甲方因实现债权所发生的各项费用（包括但不限于诉讼费、差旅费、律师费、财产保全费、公证费、鉴定费、翻译费、评估拍卖费等）。
-        </p>
-
-        <p>二、抵押财产</p>
-
-        <p>1、乙方同意以房产设定抵押。前述抵押财产详见附件《抵押财产清单》。该抵押财产清单为本合同组成部分，与本合同具有同等法律效力。
-        </p>
-        <p>2、上述抵押财产暂作价 （币种及大写金额），但该价格并不作为甲方依据本合同对抵押财产进行处分的估价依据，也不构成对甲方行使抵押权的任何限制。抵押财产的最终价值以抵押权实现时实际处理抵押财产所得价款为准。
-        </p>
-        <p>三、抵押反担保期间</p>
-        <p>1、抵押反担保的期间为甲方实际代偿担保债务后，给予丙方宽限期届满之日起或甲方依合同约定提前行使抵押反担保权之日起两年。
-        </p>
-        <p>
-            2、借款人与贷款人就主合同债务履行期限达成展期协议的，乙方对展期后的债务继续承担反担保责任，抵押反担保期间自展期协议约定的债务履行期限届满后，甲方实际代偿担保债务后，给予丙方宽限期届满之日起或甲方依合同约定提前行使反担保权之日起两年。
-        </p>
-        <p>3、甲方就主合同项下丙方的债权进行转让的，乙方对债权受让人在反担保的范围内继续承担反担保责任。</p>
-
-        <p>四、乙方承诺</p>
-
-        <p>1、乙方已按有关规定和程序取得本合同担保所需的授权。</p>
-        <p>2、乙方对抵押财产有充分、无争议的所有权或者处分权。</p>
-        <p>3、抵押财产依法可以流通或者转让。</p>
-        <p>4、抵押财产不存在被查封、扣押、监管等各种强制措施的情形。</p>
-        <p>5、乙方如实告知拖欠税款、抵押财产建设工程价款等款项及抵押财产已设定抵押、已出租等情况。</p>
-        <p>6、乙方已就本合同项下抵押事宜征得抵押财产共有人同意并提供权利共有人同意的书面文件。</p>
-        <p>7、乙方若出现下列情况之一时，应立即书面通知甲方：</p>
-        <p>（1）更换法定代表人、改变住所或经营场所、减少注册资金等；</p>
-        <p>（2）抵押财产被查封、扣押、监管或者被采取其他强制措施；</p>
-        <p>（3）乙方改变资本结构或者经营体制，包括但不限于承包、租赁、股份制改造、联营、合并、分立、合资、资产转让等；</p>
-        <p>（4）乙方被撤销、吊销营业执照、责令关闭或者出现其他解散事由；</p>
-        <p>（5）乙方申请破产、重整、和解或者被申请破产、重整。</p>
-        <p> 8、抵押财产不存在其他影响抵押权人实现抵押权的情形。</p>
-        <p>
-            9、乙方为借款人之外的第三人时，若本抵押财产的价值低于保证合同项下甲方的担保金额，乙方自愿对丙方的全部债务向甲方提供效力独立于本合同且不可撤销的连带责任保证反担保，担保范围与本抵押合同约定的担保范围一致，保证期间自甲方履行代偿之日起两年止。
-        </p>
-
-        <p>五、抵押权的效力</p>
-
-        <p>抵押权的效力及于抵押财产的从物、从权利、代位物、分离物、附合物、混合物、加工物及法律法规规定的其他财产和权利。</p>
-
-        <p>六、抵押财产的占管</p>
-
-        <p>1、本合同项下抵押财产由乙方占管，乙方对抵押财产负有妥善管理和合理使用的义务。甲方有权监督和检查抵押物的管理和使用情况。
-        </p>
-        <p>
-            2、抵押反担保期间，未经甲方书面同意，乙方不得对抵押财产作出转移、转让、出租、出售、赠与、再质押、再抵押或者其他任何方式的处分。经甲方书面同意，乙方以转让、出租或者其他方式处分抵押财产的，所得价款应用于提前清偿所担保的债权或者提存。
-        </p>
-        <p>
-            3、抵押反担保期间，抵押财产毁损、灭失、被征收、被征用或者因附合、混合、加工使抵押财产为第三人所有的，乙方应及时采取有效措施防止损失扩大，同时立即书面通知甲方。甲方有权就获得的保险金、赔偿金或者补偿金等优先受偿；被担保债权的履行期未届满的，甲方有权要求提前清偿债务或者提存。
-        </p>
-        <p>4、抵押反担保期间，抵押财产价值减少的，甲方有权要求乙方恢复抵押物的价值或者提供甲方认可的与减少价值相当的担保。
-        </p>
-
-        <p>七、抵押财产保险</p>
-
-        <p>
-            1、乙方应办理抵押财产在抵押反担保期间的财产保险，并应如实告知保险人被保险财产已经抵押给甲方的事实，且要求保险人以保险批单形式予以注明相关信息以及未经甲方同意，保险人不得直接将保险金给付乙方的意思表示的承诺。投保期限要长于反担保期限六个月。抵押财产保险的相关单据由甲方保管。
-        </p>
-        <p>2、保险费由乙方承担，乙方应按时足额缴纳保险费，并履行保险合同（含保险单或者其他保险凭证）项下的其他义务。
-        </p>
-        <p>3、抵押反担保期间，未经甲方书面同意，乙方不得单方或者与保险人协商变更、解除或者终止保险合同；不得放弃保险金请求权或者向第三人请求赔偿的权利。
-        </p>
-        <p>4、抵押反担保期间，抵押财产发生保险事故的，乙方应立即通知保险人及甲方，并负责索赔事宜。乙方未及时履行通知或者索赔义务，造成甲方损失的，应当承担赔偿责任。
-        </p>
-
-        <p>八、抵押登记</p>
-
-        <p>1、乙方应在本合同生效后 五 日内到有关登记机构办理抵押登记手续；抵押财产的他项权利证书、抵押登记文件或者其他权利证书由甲方占管。
-        </p>
-        <p>2、抵押反担保期间，如需登记机关办理变更登记的，乙方应及时到有关机关办理相应的变更登记手续。</p>
-        <p>3、抵押反担保期间，甲方依本合同约定转让抵押权的，乙方应当协助甲方、受让人办理相应的变更登记手续。</p>
-
-        <p>九、抵押权的实现</p>
-
-        <p>
-            1、发生下列事项之一时，甲方有权行使抵押权，可以与乙方协议以抵押财产折价，或者以拍卖、变卖抵押财产的价款优先受偿，或者有权申请法院依法强制执行抵押财产，所得价款不足以清偿本合同项下所担保的债权的，甲方可以选择将该款项用于归还本金、利息、罚息、复利或者费用等：
-        </p>
-        <p>（1）主合同项下债务履行期限届满，贷款人未受清偿，而要求甲方履行代偿义务的。“期限届满”包括主合同项下债务履行期限届满，以及借款人依照国家法律法规规定或者主合同的约定宣布主合同项下债权提前到期的情形；
-        </p>
-        <p>（2）乙方、丙方违反主合同、保证合同及本抵押合同项下约定，致使贷款人要求甲方履行代偿义务的；</p>
-        <p>（3）乙方、丙方出现被撤销、吊销营业执照、被责令关闭、卷入或即将卷入诉讼程序等状况，或发生其他足以影响其偿债能力或偿债诚意的行为；
-        </p>
-        <p>（4）乙方、丙方被人民法院受理破产申请或者裁定和解；</p>
-        <p>（5）乙方、丙方死亡、被宣告失踪或者死亡，或乙方、丙方作为法人消灭；</p>
-        <p>（6）抵押财产被申请撤销、申请宣告无效、异议、诉讼、仲裁、查封、冻结、监管或者被采取其他强制措施；</p>
-        <p>（7）乙方未按甲方要求提供相应的担保，或在抵押物价值减少时，未按甲方的要求补充相应的担保物的；</p>
-        <p>（8）乙方、丙方违反本合同项下义务；</p>
-        <p>（9）其他严重影响抵押权实现的情形。</p>
-        <p>
-            2、本合同所担保的债权同时存在物的反担保（含债务人或第三人提供）和保证反担保的，甲方可以就物的反担保实现债权，也可以要求保证人承担保证责任。本合同所担保的债权同时存在两个以上物的反担保人的（含债务人提供物的担保），甲方有权就其中任一或者各个担保物行使担保物权。甲方已经选择某一担保方式或担保物来实现债权的，也可同时主张通过其他担保方式或担保物来实现全部或部分债权。
-        </p>
-        <p>3、乙方以本合同项下的抵押财产为丙方与甲方之间存有的包括但不限于主合同项下的数笔债务提供反担保，且抵押财产折价或者拍卖、变卖后所得价款用以清偿或抵充的债务的顺序如下：
-        </p>
-        <p>（1）实现债权费用和代偿后代偿额应发生的利息；</p>
-        <p>（2）贷款人本息损失及甲方的代偿损失；</p>
-        <p>（3）甲方收取丙方5%的违约金；</p>
-        <p>（4）甲方代贷款人收缴其与丙方所约定的有关违约金；</p>
-        <p>（5）清偿上述款项后，仍有剩余，剩余部分返还乙方。</p>
-
-        <p>十、违约责任</p>
-
-        <p>1、本合同生效后，甲方不履行合同义务，造成乙方损失的，应承担相应的赔偿责任。</p>
-        <p>2、乙方有下列行为之一的，应按主合同借款数额的 5％向甲方支付违约金；造成甲方损失的，应同时给予全额赔偿，对于拖欠的担保费，违约金、赔偿金，将按合同签订时，同期银行利率的4倍支付利息：
-        </p>
-        <p>（1）未取得本合同反担保所需的合法有效授权；</p>
-        <p>（2）未如实告知拖欠税款、抵押物建设工程款等款项，以及抵押财产存在共有、争议、异议、已设定抵押、已出租或者被查封、扣押、监管等情况；
-        </p>
-        <p>（3）未按本合同约定办理抵押登记手续；</p>
-        <p>（4）未经甲方书面同意擅自处分抵押财产，再次对抵押财产抵押的；</p>
-        <p>（5）未按甲方要求恢复抵押财产价值或者提供相应的担保；</p>
-        <p>（6）其他违反本合同约定或者影响甲方实现抵押权的行为。</p>
-
-        <p>十一、抵押建筑物和其他土地附着物及建设用地使用权发生拆迁的特别约定</p>
-
-        <p>1、若本合同项下抵押财产为建筑物、其他土地附着物、建设用地使用权，抵押财产发生征用、征收或类似情形需要拆迁（以下统称“拆迁”）的，乙方应在知悉拆迁消息后的10日内通知甲方。
-        </p>
-        <p>
-            2、若拆迁补偿采用权利调换补偿形式且借款人未提前清偿债务，乙方应以拆迁调换的建筑物、其他土地附着物、建设用地使用权继续为借款设定抵押并签订相关协议，配合甲方为调换的建筑物、其他土地附着物、建设用地使用权办理抵押权预告登记和抵押登记，并承担相关费用。在新抵押登记办理完成前，甲方有权要求乙方提供其他担保。
-        </p>
-        <p> 3、若拆迁采用货币补偿形式，甲方有权就乙方获得的拆迁补偿款优先受偿；借款履行期未届满的，甲方有权要求乙方将拆迁补偿款存入指定账户或以存单质押等形式为债务提供担保并签订相应反担保协议。
-        </p>
-
-        <p> 十二、费用承担</p>
-
-        <p>抵押财产的鉴定、评估、登记、公证、提存等费用由丙方承担。</p>
-
-        <p>十三、其他约定事项</p>
-
-        <p>此 栏 空 白
-
-        <p>十四、争议的解决</p>
-
-        <p>凡因本合同发生的及与本合同有关的其他任何争议，甲、乙、丙三方应协商解决；协商不成的，甲、乙、丙三方同意向本合同签订地有管辖权的人民法院提起诉讼，本合同签订地为成都市武侯区。
-        </p>
-
-        <p>十五、合同的生效</p>
-
-        <p>本合同由甲方法定代表人或授权代理人、乙方法定代表人或授权代理人、丙方法定代表人或授权代理人签章（签字或盖章）并加盖公章或合同专用章后生效。
-        </p>
-
-        <p>十六、通知送达条款</p>
-        {% include 'dbms/agree/agree_board/counter/16-service-clause.html' %}
-        <p>十七、其他</p>
-        {% include 'dbms/agree/agree_board/counter/20-other.html' %}
+        <div>{% include 'dbms/agree/agree_board/counter/max/0-pre.html' %}</div>
+        <p><strong>一、</strong> 抵押物：{% include 'dbms/agree/agree_board/counter/max/d/1-d-pawn-0.html' %}</p>
+        <p><strong>二、</strong> 最高额抵押反担保的债权为：</p>
+        <div>{% include 'dbms/agree/agree_board/counter/max/1-creditor-rights-1.html' %}</div>
+        <p><strong>三、</strong> 抵押担保范围：乙方以抵押物的全部价值或依法变现的全部金额担保，担保的范围为：</p>
+        <div>{% include 'dbms/agree/agree_board/counter/max/d/2-d-scope-1.html' %}</div>
+        <p><strong>四、</strong> 抵押反担保期间</p>
+        <div>{% include 'dbms/agree/agree_board/counter/max/d/3-d-period-1.html' %}</div>
+        <p><strong>五、</strong> 为确保抵押物的真实性、合法性，乙方承诺：</p>
+        <div>{% include 'dbms/agree/agree_board/counter/max/d/5-d-promise-1.html' %}</div>
+        <p><strong>六、</strong> 乙方若出现下列情况之一时，应提前三十日通知甲方：</p>
+        <div>{% include 'dbms/agree/agree_board/counter/max/d/6-d-notice-1.html' %}</div>
+        <p><strong>七、{% include 'dbms/agree/agree_board/counter/max/d/7-d-0.html' %}</strong></p>
+        <p><strong>八、</strong> 债权的确定</p>
+        <div>{% include 'dbms/agree/agree_board/counter/max/d/8-d-credit-1.html' %}</div>
+        <p><strong>九、</strong> 抵押权的效力</p>
+        <div>{% include 'dbms/agree/agree_board/counter/max/d/9-d-render-1.html' %}</div>
+        <p><strong>十、</strong> 抵押财产的占管</p>
+        <div>{% include 'dbms/agree/agree_board/counter/max/d/10-d-tube-1.html' %}</div>
+        <p><strong>十一、</strong> 抵押财产保险</p>
+        <div>{% include 'dbms/agree/agree_board/counter/max/d/11-d-insurance-1.html' %}</div>
+        <p><strong>十二、</strong> 抵押登记</p>
+        <div>{% include 'dbms/agree/agree_board/counter/max/d/12-d-register-1.html' %}</div>
+        <p><strong>十三、</strong> 抵押权的实现</p>
+        <div>{% include 'dbms/agree/agree_board/counter/max/d/13-d-realize-1.html' %}</div>
+        <p><strong>十四、</strong> 甲方依法处分抵押物所得的价款，按下列顺序分配：</p>
+        <div>{% include 'dbms/agree/agree_board/counter/max/d/14-d-distribution-1.html' %}</div>
+        <p><strong>十五、</strong> 违约责任：</p>
+        <div>{% include 'dbms/agree/agree_board/counter/max/d/15-d-contract-1.html' %}</div>
+        <p><strong>十六、</strong> {% include 'dbms/agree/agree_board/counter/max/d/16-d-0.html' %}</p>
+        <p><strong>十七、</strong> 抵押建筑物和其他土地附着物及建设用地使用权发生拆迁的特别约定</p>
+        <div>{% include 'dbms/agree/agree_board/counter/max/d/17-d-special-1.html' %}</div>
+        <p><strong>十八、</strong> 通知送达条款</p>
+        <div>{% include 'dbms/agree/agree_board/counter/11-notify-1.html' %}</div>
+        <p><strong>十九、</strong> 争议的解决</p>
+        <div>{% include 'dbms/agree/agree_board/counter/12-dispute-1.html' %}</div>
+        <p><strong>二十、</strong> 其他约定事项</p>
+        <div>{% include 'dbms/agree/agree_board/17-other-1.html' %}</div>
+        <p><strong>二十一、</strong> {% include 'dbms/agree/agree_board/counter/max/d/21-d-0.html' %}</p>
+        <p><strong>二十二、</strong> {% include 'dbms/agree/agree_board/counter/max/d/22-d-0.html' %}</p>
+        <p><strong>二十三、</strong> {% include 'dbms/agree/agree_board/counter/max/d/23-d-0.html' %}</p>
+        <p><strong>二十四、</strong> 其他</p>
+        <div>{% include 'dbms/agree/agree_board/counter/24-other.html' %}</div>
     </div>
     <div class="split">
-        {% include 'dbms/agree/agree_board/counter/counter-signature-page.html' %}
+        {% include 'dbms/agree/agree_board/counter/max/d/25-d-appendix-1.html' %}
+    </div>
+    <div class="split">
+        {% include 'dbms/agree/agree_board/counter/counter-sign.html' %}
     </div>
 </div>
 
