--- a/A_dbms/templates/dbms/agree/agree_board/counter/max/0-pre.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/max/0-pre.html
@@ -1,7 +1,13 @@
-<p>根据乙方申请，甲方决定为乙方在<strong><u>{{ agree_obj.branch.name }}</u></strong>的债务（包括借款或承兑汇票、
+<p>根据丙方申请，甲方决定为丙方在<strong><u>{{ agree_obj.branch.name }}</u></strong>的债务（包括借款或承兑汇票、
     保函等）提供保证担保，于<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>年
     <u>&nbsp&nbsp&nbsp&nbsp</u>月<u>&nbsp&nbsp&nbsp&nbsp</u>日签订《最高额委托保证合同》
     （合同编号：<strong><u>{{ agree_obj.agree_num }}</u></strong>，以下简称“主合同”），
     并受托与债权银行签订相应的保证合同或保函。
-    经甲、丙方要求，乙方愿意就甲方基于为丙方担保所承担的保证责任而向甲方提供相应的保证反担保。甲、乙、
+    经甲、丙方要求，乙方愿意就甲方基于为丙方担保所承担的保证责任而向甲方提供相应的
+    {% if counter_obj.counter_typ in MORTGAGE_COUNTER_TYP_LIST %}
+        抵押
+    {% elif counter_obj.counter_typ == 1 or counter_obj.counter_typ == 2 %}
+        保证
+    {% endif %}
+    反担保。甲、乙、
     丙三方根据有关法律、法规规定，经协商一致，特订立如下条款：</p>
