--- a/A_dbms/templates/dbms/agree/preview-sign.html
+++ b/A_dbms/templates/dbms/agree/preview-sign.html
@@ -10,7 +10,7 @@
         {#字体大小#} font-size: 12pt;
         {#背景色#} background-color: #dddddd;
         {#字间距#} letter-spacing: 1pt;
-        {#行间距#} line-height: 19pt;
+        {#行间距#} line-height: 20.5pt;
         }
 
         {#段前缩进#}
@@ -77,34 +77,36 @@
         .sign-date {
             padding-left: 150pt;
         }
+
+        table {
+            width: 100%;
+        }
+
+        tr td {
+            border: 1px solid black;
+            height: 24pt;
+
+        }
     </style>
 {% endblock %}
 {% block body %}
-    <!-- COUNTER_TYP_LIST = (
-            (1, '企业担保'), (2, '个人保证'),
-            (11, '房产抵押'), (12, '土地抵押'), (13, '动产抵押'), (14, '在建工程抵押'), (15, '车辆抵押'),
-            (31, '应收质押'), (32, '股权质押'), (33, '票据质押'), (34, '动产质押'),
-            (41, '其他权利质押'),
-            (51, '股权预售'), (52, '房产预售'), (53, '土地预售'))
-            AGREE_TYP_LIST = [(1, '单笔'), (2, '最高额'), (3, '保函'), (7, '小贷'),
-                          (41, '单笔(公证)'), (42, '最高额(公证)'), (47, '小贷(公证)')]-->
-    {#单笔#}
-    {% if agree_obj.agree_typ == 1 %}
-        {% if counter_obj.counter_typ == 1 %}
-            {% include 'dbms/agree/agree_board/counter/counter-s-x.html' %}
-        {% elif counter_obj.counter_typ == 2 %}
-            {% include 'dbms/agree/agree_board/counter/counter-s-g.html' %}
-        {% elif counter_obj.counter_typ == 11 %}
-            {% include 'dbms/agree/agree_board/counter/counter-s-d.html' %}
-        {% endif %}
-        {#最高额#}
-    {% elif agree_obj.agree_typ == 2 %}
-        {% if counter_obj.counter_typ == 1 %}
-            {% include 'dbms/agree/agree_board/counter/counter-m-x.html' %}
-        {% elif counter_obj.counter_typ == 2 %}
-            {% include 'dbms/agree/agree_board/counter/counter-m-g.html' %}
-        {% elif counter_obj.counter_typ == 11 %}
-            {% include 'dbms/agree/agree_board/counter/counter-m-d.html' %}
-        {% endif %}
-    {% endif %}
+    <div class="container">
+        <p align="center"><strong>成都武侯中小企业融资担保有限责任公司</strong></p>
+        <p align="center"><strong>合 同 审 签 表</strong></p>
+
+        <table>
+            <tr>
+                <td>公司名称</td>
+                <td colspan="5">{{ agree_obj.lending.summary.custom.name }}</td>
+            </tr>
+            <tr>
+                <td>贷款银行</td>
+                <td>{{ agree_obj.branch }}</td>
+                <td>贷款金额</td>
+                <td>{{ agree_amount_str }}万元</td>
+                <td>期限</td>
+                <td>{{ agree_obj.agree_term }}个月</td>
+            </tr>
+        </table>
+    </div>
 {% endblock %}
