--- a/A_dbms/templates/dbms/agree/scan/agree-summry.html
+++ b/A_dbms/templates/dbms/agree/scan/agree-summry.html
@@ -4,6 +4,8 @@
         <label class="navbar-right">
             <a class="btn btn-primary btn-sm" target="_blank"
                href="{% url 'dbms:agree_preview' agree_id=agree_obj.id %}">预览 </a>
+            <a class="btn btn-primary btn-sm" target="_blank"
+               href="{% url 'dbms:agree_sign_preview' agree_id=agree_obj.id %}">审签表</a>
             <a class="btn btn-primary btn-sm " id="addCounterB">添加反担保</a>
             <a class="btn btn-primary btn-sm " id="signAgreeB">签批</a>
             <a class="btn btn-primary btn-sm " id="editAgreeB">修改</a>
