--- a/A_dbms/templates/dbms/agree/scan/tab/agree-counters.html
+++ b/A_dbms/templates/dbms/agree/scan/tab/agree-counters.html
@@ -23,29 +23,40 @@
                 {% if counter.counter_typ in COUNTER_TYP_CUSTOM %}
                     <td>
                         {% for custome in counter.assure_counter.custome.all %}
-                            {{ custome.name }}
-                            {% if not forloop.last %}、{% endif %}
+                            <a target="_blank"
+                               href="{% url 'dbms:custom_scan' custom_id=custome.id %}">
+                                {{ custome.name }}</a>
+                            {% if custome.person_custome.spouses %}
+                                、 <a target="_blank"
+                                     href="{% url 'dbms:custom_scan' custom_id=custome.person_custome.spouses.id %}">
+                                {{ custome.person_custome.spouses.name }}</a>
+                            {% endif %}
                         {% endfor %}
                     </td>
                 {% else %}
                     <td>
                         {% for warrant in counter.warrant_counter.warrant.all %}
                             <!-- WARRANT_TYP_LIST = [
-                                (1, '房产'), (5, '土地'), (11, '应收'), (21, '股权'),
-                                (31, '票据'), (41, '车辆'), (51, '动产'), (99, '他权')]-->
-                            {% if warrant.warrant_typ == 1 or warrant.warrant_typ == 5 %}
+        (1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程'), (11, '应收账款'),
+        (21, '股权'), (31, '票据'), (41, '车辆'), (51, '动产'), (55, '其他'), (99, '他权')]-->
+                            {% if warrant.warrant_typ in WARRANT_TYP_OWN_LIST %}
                                 {% if forloop.first %}
                                     {% for ownership in warrant.ownership_warrant.all %}
-                                        {{ ownership.owner.name }}
-                                        {% if not forloop.last %}、{% endif %}
+                                        <a target="_blank"
+                                           href="{% url 'dbms:custom_scan' custom_id=ownership.owner.id %}">
+                                            {{ ownership.owner.name }}</a>{% if not forloop.last %}、{% endif %}
                                     {% endfor %}
                                 {% endif %}
                             {% elif warrant.warrant_typ == 11 %}
-                                {{ warrant.receive_warrant.receive_owner }}
+                                <a target="_blank"
+                                   href="{% url 'dbms:custom_scan' custom_id=warrant.receive_warrant.receive_owner.id %}">
+                                    {{ warrant.receive_warrant.receive_owner }}</a>
                             {% elif warrant.warrant_typ == 21 %}
-                                {{ warrant.stock_warrant.stock_owner }}
+                                <a target="_blank"
+                                   href="{% url 'dbms:custom_scan' custom_id=warrant.stock_warrant.stock_owner.id %}">
+                                    {{ warrant.stock_warrant.stock_owner }}</a>
                             {% else %}
-                                {{ warrant.receive_warrant.owner.name }}
+
                             {% endif %}
                         {% endfor %}
                     </td>
@@ -57,8 +68,8 @@
                            href="{% url 'dbms:agree_counter_preview' agree_id=agree_obj.id counter_id=counter.id %}">
                             预览</a></td>
                 {% elif PAGE_TITLE == '风控落实' %}
-                    <td>{{ counter.counter_sign_date }}</td>
-                    <td>{{ counter.counter_remark }}</td>
+                    <td>{{ counter.counter_sign_date|default_if_none:'' }}</td>
+                    <td>{{ counter.counter_remark|default_if_none:'' }}</td>
                     <td><a class="btn btn-primary btn-xs counterSignB">签订</a></td>
                 {% endif %}
             <tr>
