--- a/A_dbms/templates/dbms/appraisal/appraisal-scan-lending.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal-scan-lending.html
@@ -9,12 +9,14 @@
         {% include 'dbms/appraisal/lending/appraisal-lending-tab.html' %}
         {% include 'dbms/appraisal/modl/guarantee-add-mod.html' %}
         {% include 'dbms/appraisal/modl/guarantee-del-mod.html' %}
+        {% include 'dbms/appraisal/modl/lending-change-mod.html' %}
     </div>
 {% endblock %}
 
 {% block extra-js %}
     {% include 'dbms/appraisal/extra/js-guarantee-add.html' %}
     {% include 'dbms/appraisal/extra/js-guarantee-del.html' %}
+    {% include 'dbms/appraisal/extra/js-lending-change.html' %}
     {% include 'dbms/js/js-guarantee-warrant.html' %}
 
 {% endblock %}
