--- a/A_dbms/templates/dbms/appraisal/extra/js-article-sign.html
+++ b/A_dbms/templates/dbms/appraisal/extra/js-article-sign.html
@@ -44,6 +44,7 @@
                         $('#e_sign_type').text(dict.forme.sign_type);
                         $('#e_renewal').text(dict.forme.renewal);
                         $('#e_augment').text(dict.forme.augment);
+                        $('#e_credit_amount').text(dict.forme.credit_amount);
                         $('#e_sign_detail').text(dict.forme.sign_detail);
                         $('#e_sign_date').text(dict.forme.sign_date);
                     }
