--- a/A_dbms/templates/dbms/appraisal/modl/mod_form/article-sign.html
+++ b/A_dbms/templates/dbms/appraisal/modl/mod_form/article-sign.html
@@ -18,6 +18,12 @@
         <label id="e_augment" class="pull-right">{{ form_article_sign.augment.errors }}</label>
     </div>
 
+    <div class="form-group"><!--授信总额（元）-->
+        <label for="id_credit_amount" class="col-sm-3 control-label">{{ form_article_sign.credit_amount.label }}：</label>
+        <div class="col-sm-9">{{ form_article_sign.credit_amount }}</div>
+        <label id="e_credit_amount" class="pull-right">{{ form_article_sign.credit_amount.errors }}</label>
+    </div>
+
     <div class="form-group"><!--风控部意见-->
         <label for="id_rcd_opinion" class="col-sm-3 control-label">{{ form_article_sign.rcd_opinion.label }}：</label>
         <div class="col-sm-9">{{ form_article_sign.rcd_opinion }}</div>
@@ -25,7 +31,8 @@
     </div>
 
     <div class="form-group"><!--招集人意见-->
-        <label for="id_convenor_opinion" class="col-sm-3 control-label">{{ form_article_sign.convenor_opinion.label }}：</label>
+        <label for="id_convenor_opinion"
+               class="col-sm-3 control-label">{{ form_article_sign.convenor_opinion.label }}：</label>
         <div class="col-sm-9">{{ form_article_sign.convenor_opinion }}</div>
         <label id="e_convenor_opinion" class="pull-right">{{ form_article_sign.convenor_opinion.errors }}</label>
     </div>
