--- a/A_dbms/templates/dbms/appraisal/scan/tab/lending_order.html
+++ b/A_dbms/templates/dbms/appraisal/scan/tab/lending_order.html
@@ -38,7 +38,9 @@
                 <td>{{ lending.order_amount }}</td>
                 <td>{{ lending.lending_provide_sum }}</td>
                 {% if PAGE_TITLE == '项目评审' %}
-                    <td><a class="btn btn-danger btn-xs delLendingOrderB">删除</a></td>
+                    <td>
+                        <a class="btn btn-primary btn-xs delLendingOrderB">删除</a>
+                    </td>
                 {% endif %}
             <tr>
         {% endfor %}
