--- a/A_dbms/templates/dbms/agree/agree_board/counter/counter-home.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/counter-home.html
@@ -1,8 +1,6 @@
 <p align="right">合同编号：<u>{{ counter_obj.counter_num }}</u></p>
 {#合同标题#}
-<p class="agree-title">
-    {% include 'dbms/agree/agree_board/counter/counter-home-title.html' %}
-</p>
+<p class="agree-title"><strong>{{ counter_obj.counter_name }}</strong></p>
 <div class="page-table">
     <div class="page-home-j">
         <div>
