--- a/A_dbms/templates/dbms/agree/agree_board/entrust-maximum.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust-maximum.html
@@ -1,4 +1,4 @@
-<div class="split" xmlns="http://www.w3.org/1999/html">
+<div class="split">
     {% include 'dbms/agree/agree_board/entrust/home-page.html' %}
 </div>
 
