--- a/A_dbms/templates/dbms/agree/agree_board/entrust/max/2-amount-0.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust/max/2-amount-0.html
@@ -1,21 +1,14 @@
-甲方同意为乙方自<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>年
-<u>&nbsp&nbsp&nbsp&nbsp</u>月
-<u>&nbsp&nbsp&nbsp&nbsp</u>日至<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>年
-<u>&nbsp&nbsp&nbsp&nbsp</u>月<u>&nbsp&nbsp&nbsp&nbsp</u>日期间，
-向债权人（或受益人）<strong><u>{{ agree_obj.branch.name }}</u></strong>申请限额（即最高
-额限额）为<strong><u class="frap">人民币{{ agree_amount_str }}万元</u></strong>
-（大写：<strong><u>{{ agree_amount_cn }}</u></strong>）
+甲方同意为乙方自<u>&nbsp&nbsp&nbsp&nbsp</u>年<u>&nbsp&nbsp</u>月<u>&nbsp&nbsp</u>日
+至<u>&nbsp&nbsp&nbsp&nbsp</u>年<u>&nbsp&nbsp</u>月<u>&nbsp&nbsp</u>日期间，
+向债权人（或受益人）<span class="str-p"><strong><u>{{ agree_obj.branch.name }}</u></strong></span>申请限额（即最高
+额限额）为<span class="str-p"><strong><u>人民币{{ agree_amount_str }}万元</u></strong></span>（大
+写：<span class="str-p"><strong><u>{{ agree_amount_cn }}</u></strong></span>）
 的一系列债务（包括但不限于：人民币借款、银行承兑汇票扣除保证金后的差额票款、保函等）提供担保。
 上述一系列债务的保证合同包括但不限于：
-<p>（一）担保范围：与甲方与债权人（或受益人）自<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>年
-    <u>&nbsp&nbsp&nbsp&nbsp</u>月<u>&nbsp&nbsp&nbsp&nbsp</u>日至
-    <u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>年
-    <u>&nbsp&nbsp&nbsp&nbsp</u>月<u>&nbsp&nbsp&nbsp&nbsp</u>日期间签订的
-    一系列保证合同或保函一致。</p>
-<p>（二）担保期限：与甲方与债权人（或受益人）自<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>年
-    <u>&nbsp&nbsp&nbsp&nbsp</u>月<u>&nbsp&nbsp&nbsp&nbsp</u>日至
-    <u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>年
-    <u>&nbsp&nbsp&nbsp&nbsp</u>月<u>&nbsp&nbsp&nbsp&nbsp</u>日期间签订的
+<p>（一）担保范围：与甲方与债权人（或受益人）自<u>&nbsp&nbsp</u>年<u>&nbsp</u>月<u>&nbsp</u>日至
+    <u>&nbsp&nbsp</u>年<u>&nbsp</u>月<u>&nbsp</u>日期间签订的一系列保证合同或保函一致。</p>
+<p>（二）担保期限：与甲方与债权人（或受益人）自<u>&nbsp&nbsp</u>年<u>&nbsp</u>月<u>&nbsp</u>日至
+    <u>&nbsp&nbsp</u>年<u>&nbsp</u>月<u>&nbsp</u>日期间签订的
     每笔保证合同或保函中约定的保证期间一致，但担保期限不超过限期内最后一笔债务履行期届满之日后两年。</p>
 <p>（三）乙方在办理最高额限额内的每笔融资业务时，应提前向甲方申请，经甲方审批同意后再与债权银行签
     订相关合同或出具放款通知书后方可使用。</p>
