--- a/A_dbms/templates/dbms/agree/agree_board/entrust/max/3-bail-0.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust/max/3-bail-0.html
@@ -1,5 +1,5 @@
-甲方可根据乙方的信用情况，向乙方收取人民币<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>元
-（大写：<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>元整）
+甲方可根据乙方的信用情况，向乙方收取人民币<u>&nbsp&nbsp&nbsp&nbsp</u>元
+（大写：<u>&nbsp&nbsp&nbsp&nbsp&nbsp</u>元整）
 担保风险保证金，并由乙方在本合同签订后3个工作日内支付至甲方指定账户。在乙方完全履行
 完由甲方担保的债务后，甲方将上述保证金无息退还乙方，如乙方不履行债务，上述保证金将作
 为违约金，甲方不予退还。
