--- a/A_dbms/templates/dbms/agree/preview-counter.html
+++ b/A_dbms/templates/dbms/agree/preview-counter.html
@@ -1,93 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}{{ counter_obj.counter_num }}{% endblock %}
 {% block extra-css %}
-    <style>
-        {#页面整体设置#}
-        .container {
-        {#宽度#} width: 210mm;
-        {#左空白#} margin-left: auto;
-        {#又空白#} margin-right: auto;
-        {#字体大小#} font-size: 12pt;
-        {#背景色#} background-color: #dddddd;
-        {#字间距#} letter-spacing: 1pt;
-        {#行间距#} line-height: 20.5pt;
-        }
-
-        {#段前缩进#}
-        p {
-            text-indent: 26pt;
-        }
-
-        {#换页打印#}
-        .split {
-            page-break-after: always;
-        }
-
-        {#收紧#}
-        .frap {
-        {#字间距#} letter-spacing: 0pt;
-        }
-
-        {#合同标题#}
-        .agree-title {
-            text-align: center;
-            font-size: 21pt;
-            padding-top: 25mm;
-            padding-bottom: 25mm;
-        }
-
-        .page-home p {
-            padding-top: 12pt;
-        }
-
-        {#合同封面-甲方#}
-        .page-home-j {
-            font-size: 13.75pt;
-            padding-top: 20mm;
-            padding-bottom: 20mm;
-        }
-
-        {#合同封面-乙方#}
-        .page-home-y {
-            font-size: 13.75pt;
-            padding-top: 20mm;
-            padding-bottom: 20mm;
-        }
-
-        {#合同封面-丙方#}
-        .page-home-b {
-            font-size: 13.75pt;
-            padding-top: 20mm;
-            padding-bottom: 20mm;
-        }
-
-        {#合同签字页#}
-        .sign-page {
-            padding-top: 24pt;
-        }
-
-        .sign-page > div {
-            padding-bottom: 124pt;
-        }
-
-        .sign-page p {
-            padding-bottom: 10pt;
-        }
-
-        .sign-date {
-            padding-left: 150pt;
-        }
-
-        table {
-            width: 100%;
-        }
-
-        tr td {
-            border: 1px solid black;
-            height: 24pt;
-
-        }
-    </style>
+    {% include 'dbms/agree/agree_board/style.html' %}
 {% endblock %}
 {% block body %}
     <!-- COUNTER_TYP_LIST = (
