--- a/A_dbms/templates/dbms/agree/preview-agree.html
+++ b/A_dbms/templates/dbms/agree/preview-agree.html
@@ -1,89 +1,18 @@
-{% extends 'base.html' %}
-{% block title %}{{ agree_obj.agree_num }}{% endblock %}
-{% block extra-css %}
-    <style>
-        {#页面整体设置#}
-        .container {
-        {#宽度#} width: 210mm;
-        {#左空白#} margin-left: auto;
-        {#又空白#} margin-right: auto;
-        {#字体大小#} font-size: 12pt;
-        {#背景色#} background-color: #dddddd;
-        {#字间距#} letter-spacing: 1pt;
-        {#行间距#} line-height: 19pt;
-        }
-
-        {#段前缩进#}
-        p {
-            text-indent: 26pt;
-        }
-
-        {#换页打印#}
-        .split {
-            page-break-after: always;
-        }
-
-        {#收紧#}
-        .frap {
-        {#字间距#} letter-spacing: 0pt;
-        }
-
-        {#合同标题#}
-        .agree-title {
-            text-align: center;
-            font-size: 21pt;
-            padding-top: 25mm;
-            padding-bottom: 25mm;
-        }
-
-        .page-home p {
-            padding-top: 12pt;
-        }
-
-        {#合同封面-甲方#}
-        .page-home-j {
-            font-size: 13.75pt;
-            padding-top: 20mm;
-            padding-bottom: 20mm;
-        }
-
-        {#合同封面-乙方#}
-        .page-home-y {
-            font-size: 13.75pt;
-            padding-top: 20mm;
-            padding-bottom: 20mm;
-        }
-
-        .agree-title-g {
-            text-align: center;
-            font-size: 21pt;
-        }
-
-        {#合同签字页#}
-        .sign-page {
-            padding-top: 24pt;
-        }
-
-        .sign-page > div {
-            padding-bottom: 124pt;
-        }
-
-        .sign-page p {
-            padding-bottom: 10pt;
-        }
-
-        .sign-date {
-            padding-left: 150pt;
-        }
-    </style>
-{% endblock %}
-{% block body %}
-    <div class="container">
-        <!--AGREE_TYP_LIST = ((1, '单笔'), (2, '最高额'), (3, '保函'))-->
-        {% if agree_obj.agree_typ == 1 %}
-            {% include 'dbms/agree/agree_board/entrust-single.html' %}
-        {% elif agree_obj.agree_typ == 2 %}
-            {% include 'dbms/agree/agree_board/entrust-maximum.html' %}
-        {% endif %}
-    </div>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>{{ agree_obj.agree_num }}</title>
+    {% include 'dbms/agree/agree_board/style.html' %}
+</head>
+<body>
+<div class="contain">
+    <!--AGREE_TYP_LIST = ((1, '单笔'), (2, '最高额'), (3, '保函'))-->
+    {% if agree_obj.agree_typ == 1 %}
+        {% include 'dbms/agree/agree_board/entrust-single.html' %}
+    {% elif agree_obj.agree_typ == 2 %}
+        {% include 'dbms/agree/agree_board/entrust-maximum.html' %}
+    {% endif %}
+</div>
+</body>
+</html>
