--- a/A_dbms/templates/dbms/report/balance/balance-class-depart.html
+++ b/A_dbms/templates/dbms/report/balance/balance-class-depart.html
@@ -1,21 +1,21 @@
 <div class="table-responsive">
     <table class="table table-bordered table-hover table-condensed active">
-        <caption>成都武侯中小企业融资担保有限责任公司在保项目分类统计表（按项目助理）</caption>
+        <caption>成都武侯中小企业融资担保有限责任公司在保项目分类统计表（按项目经理）</caption>
         <thead>
         <tr style="text-align: center">
             <th>序号</th>
-            <th>项目助理理</th>
+            <th>部门</th>
             <th>项目笔数</th>
             <th>担保余额</th>
         </tr>
         </thead>
         <tbody>
-        {% for assistant in provide_groups_assistant %}
+        {% for depart in provide_groups_depart %}
             <tr>
                 <td>{{ forloop.counter }}</td>
-                <td>{{ assistant.notify__agree__lending__summary__assistant__name }}</td>
-                <td align="right">{{ assistant.con }}</td>
-                <td align="right">{{ assistant.sum|floatformat:2 }}</td>
+                <td>{{ depart.notify__agree__lending__summary__director__department__name }}</td>
+                <td align="right">{{ depart.con }}</td>
+                <td align="right">{{ depart.sum|floatformat:2 }}</td>
             </tr>
         {% endfor %}
         {% include 'dbms/report/balance/balance-class.html' %}
