--- a/A_dbms/templates/dbms/report/balance/balance-class-director.html
+++ b/A_dbms/templates/dbms/report/balance/balance-class-director.html
@@ -15,7 +15,7 @@
                 <td>{{ forloop.counter }}</td>
                 <td>{{ director.notify__agree__lending__summary__director__name }}</td>
                 <td align="right">{{ director.con }}</td>
-                <td align="right">{{ director.sum }}</td>
+                <td align="right">{{ director.sum|floatformat:2 }}</td>
             </tr>
         {% endfor %}
         {% include 'dbms/report/balance/balance-class.html' %}
