--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,16 @@
 {% extends 'base.html' %}
 
+{% block extra-css %}
+    <style>
+        .bj {
+            background: url(daisies.jpg) bottom center no-repeat #efeff4;
+            background-size: 100% 100%;
+            width: 100%;
+            height: 100%;
+        }
+
+    </style>
+{% endblock %}
 {% block body %}
     <nav style="background-color: #337ab7" class="navbar navbar-inverse navbar-fixed-top"><!--导航-->
         <div class="container-fluid">
@@ -72,6 +83,11 @@
                  style="padding-left: 1px;padding-right: 1px;"> <!--主体-->
                 {% block right-content-container %}<!--右侧内容-->
                     <h2 class="page-header"><a href="{% url 'dbms:index' %}">测试页，点击进入正式系统</a></h2>
+
+                    <div style="background:url('bbj.png') no-repeat;width:100px;height:100px">
+                        qweqe
+                    </div>
+
                 {% endblock %}
             </div>
         </div>
